--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="btn-about">
   <div class="container-about">
     <div class="image-about-container">
       <h1 class="hide-title-about" id="about">A few words about Fullstack Developer Lloyd Jefferson</h1>
@@ -17,19 +17,19 @@
         <img class="img-about" src="./img/about/img.jpg" alt="Man with a laptop">
       </picture>
     </div>
-    <div class="text-about-container accordion-container">
-      <ul class="list-about ">
+    <div class="text-about-container">
+      <ul class="list-about accordion-container">
         <li class="item-about ac">
-          <div class="head-cv-about-container ac-header">
-            <h3 class="small-title-about">About me</h3>
-            <button type="button" class="btn-about" id="btn-about">
-              <svg class="icon-about icon-open">
+          <div class="head-cv-about-container">
+            <h3 class="small-title-about ac-header">About me</h3>
+            <button type="button" class="btn-about ac-trigger">
+              <svg class="icon-about icon-close">
                 <use href="./img/about/icons-about.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
           <div class="text-cv-about-container ac-panel">
-            <p class="paragraph-about gap">I am Lloyd Jefferson, a talented programmer with extensive expertise in
+            <p class="paragraph-about gap ac-text-about">I am Lloyd Jefferson, a talented programmer with extensive expertise in
               software development. I have an understanding
               of
               different programming languages ​​and technologies, always ready to improve my skills. I always follow the
@@ -38,7 +38,7 @@
               and look for unconventional, creative solutions to problems. I have a high level of analytical skills and
               am able to
               effectively solve even the most difficult tasks encountered on the way.</p>
-            <p class="paragraph-about">Able to work both independently and in a team. I can effectively cooperate with
+            <p class="paragraph-about ac-text-about">Able to work both independently and in a team. I can effectively cooperate with
               colleagues, exchanging ideas and
               finding
               optimal solutions. Professional maturity allows you to calmly cope with challenges and stressful
@@ -53,32 +53,32 @@
           </div>
         </li>
         <li class="item-about ac">
-          <div class="head-cv-about-container ac-header">
-            <h3 class="small-title-about">Role</h3>
-            <button type="button" class="btn-about" id="btn-role">
-              <svg class="icon-about icon-close">
+          <div class="head-cv-about-container">
+            <h3 class="small-title-about ac-header">Role</h3>
+            <button type="button" class="btn-about ac-trigger" id="btn-role">
+              <svg class="icon-about icon-open">
                 <use href="./img/about/icons-about.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
           <div class="text-cv-about-container ac-panel">
             <ul class="list-cv-about">
-              <li>
+              <li class="ac-text-about">
                 <p class="paragraph-about">Frontend development</p>
               </li>
-              <li>
+              <li class="ac-text-about">
                 <p class="paragraph-about">HeadlessCMS, Wordpress</p>
               </li>
-              <li>
+              <li class="ac-text-about">
                 <p class="paragraph-about">Blender(enjoy)</p>
               </li>
             </ul>
           </div>
         </li>
         <li class="item-about ac">
-          <div class="head-cv-about-container ac-header">
-            <h3 class="small-title-about">Education</h3>
-            <button type="button" class="btn-about" id="btn-edu">
+          <div class="head-cv-about-container">
+            <h3 class="small-title-about ac-header">Education</h3>
+            <button type="button" class="btn-about ac-trigger" id="btn-edu">
               <svg class="icon-about icon-close">
                 <use href="./img/about/icons-about.svg#icon-btn"></use>
               </svg>
@@ -86,14 +86,14 @@
           </div>
           <div class="text-cv-about-container ac-panel">
             <ul class="list-cv-about">
-              <li>
+              <li class="ac-text-about">
                 <p class="paragraph-about">2018 - 2019 / Frontend Development Diploma, GoIT IT <br> School, New York</p>
               </li>
-              <li>
+              <li class="ac-text-about">
                 <p class="paragraph-about">2019 - 2020 / Advanced Web Development Certificate, GoIT IT School, New York
                 </p>
               </li>
-              <li>
+              <li class="ac-text-about">
                 <p class="paragraph-about">2020 - 2022 / Advanced Blender Animation Techniques, Udemy</p>
               </li>
             </ul>
