--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -48,14 +48,18 @@
     gap: 12px;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
+.swiper-button-prev-reviews,
+.swiper-button-next-reviews {
     border: 1px solid rgba(250, 250, 250, 0.5);
-    border-radius: 50%;
-    padding: 14px;
-    background-color: #1c1d20;
+    border-radius: 60px;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     fill: none;
     stroke: #fafafa;
+    cursor: pointer;
 }
 
 .reviews-list .reviews-item {
@@ -130,9 +134,10 @@
         gap: 20px;
     }
 
-    .swiper-button-prev,
-    .swiper-button-next {
-        padding: 18px;
+    .swiper-button-prev-reviews,
+    .swiper-button-next-reviews {
+        width: 68px;
+        height: 68px;
     }
 
     .reviews-list .reviews-item {
@@ -162,10 +167,10 @@
         gap: 20px;
     }
 
-    .swiper-button-prev,
-    .swiper-button-next {
-        padding: 18px;
-    }
+    /* .swiper-button-prev-reviews,
+    .swiper-button-next-reviews {
+        
+    } */
 
     .reviews-list .reviews-item {
         width: 332px;
