--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,12 +3,12 @@
   <div class="swiper-container">
     <ul class="reviews-list swiper-wrapper"></ul>
     <nav class="swiper-navigation">
-      <div class="swiper-button-prev">
+      <div class="swiper-button-prev-reviews">
         <svg class="icon-arrow">
           <use href="./img/reviews/arrows.svg#icon-arrow-narrow-left"></use>
         </svg>
       </div>
-      <div class="swiper-button-next">
+      <div class="swiper-button-next-reviews">
         <svg class="icon-arrow">
           <use href="./img/reviews/arrows.svg#icon-arrow-narrow-right"></use>
         </svg>
