--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,4 +1,4 @@
-<section class="section-benefits benefits">
+<section id="benefits" class="section-benefits benefits">
 
 	<div class="benefits-container">
 
@@ -10,7 +10,7 @@
 				<li class="benefits-item">
 					<div class="benefits-icon">
 						<svg class="icon" width="24" height="24">
-							<use href="../img/benefits/icons.svg#icon-user"></use>
+							<use href="./img/benefits/icons.svg#icon-user"></use>
 						</svg>
 					</div>
 					<h3 class="benefits-subtitle">Expertise</h3>
@@ -19,7 +19,7 @@
 				<li class="benefits-item">
 					<div class="benefits-icon">
 						<svg class="icon" width="24" height="24">
-							<use href="../img/benefits/icons.svg#icon-message-chat-circle"></use>
+							<use href="./img/benefits/icons.svg#icon-message-chat-circle"></use>
 						</svg>
 					</div>
 					<h3 class="benefits-subtitle">Communication</h3>
@@ -28,7 +28,7 @@
 				<li class="benefits-item">
 					<div class="benefits-icon">
 						<svg class="icon" width="24" height="24">
-							<use href="../img/benefits/icons.svg#icon-brush"></use>
+							<use href="./img/benefits/icons.svg#icon-brush"></use>
 						</svg>
 					</div>
 					<h3 class="benefits-subtitle">Art</h3>
@@ -37,7 +37,7 @@
 				<li class="benefits-item">
 					<div class="benefits-icon">
 						<svg class="icon" width="24" height="24">
-							<use href="../img/benefits/icons.svg#icon-hourglass"></use>
+							<use href="./img/benefits/icons.svg#icon-hourglass"></use>
 						</svg>
 					</div>
 					<h3 class="benefits-subtitle">Urgent execution</h3>
@@ -45,7 +45,7 @@
 				</li>
 			</ul>
 
-			<a href="#worktogether" class="benefits-button">Order the project</a>
+			<a href="#footer" class="benefits-button">Order the project</a>
 
 		</div>
 
