--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -94,7 +94,9 @@
   cursor: pointer;
 }
 .scroll-button:hover {
-  border-color: rgb(194, 121, 124);
+  border-color: #e0373f;
+  fill: #e0373f;
+  stroke: #e0373f;
 }
 .disabled-button {
   opacity: 0.2;
