--- a/src/css/about.css
+++ b/src/css/about.css
@@ -108,6 +108,7 @@
 }
 
 .skills-about-container {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -121,10 +122,11 @@
 
 .list-skills-about {
   display: flex;
-
 }
 
 .swiper-wrapper {
+  position: absolute;
+  
   width: 100px;
 }
 
@@ -137,7 +139,7 @@
   border: none;
 }
 
-.icon-close.icon-open {
+.icon-open {
   width: 12px;
   height: 12px;
   fill: none;
@@ -153,8 +155,7 @@
   justify-content: center;
   text-align: center;
 
-  height: 200px;
-  padding: 88px 52px;
+  height: 130px;
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 100%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -211,7 +212,23 @@
   transition: height 250ms cubic-bezier(.4, 0, .2, 1), visibility 250ms cubic-bezier(.4, 0, .2, 1);
 }
 
+.btn-about:hover,
+.btn-about:active,
+.is-active .btn-about {
+  border-color: #000;
+  background-color: #E0373F;
+}
 
+.btn-about:hover .icon-about,
+.is-active .icon-about {
+  stroke: #000;
+}
+
+.is-active .small-title-about,
+.small-title-about:hover,
+.small-title-about:active {
+  color: #E0373F;
+}
 
 @media screen and (max-width: 767px) {
   .swiper-slide.hide-mob {
@@ -396,10 +413,11 @@
     max-width: 1312px;
   }
 
-  .item-skills-about {
+  .list-skills-about .item-skills-about {
     width: 200px;
     height: 200px;
     margin: 88px auto;
+    padding: 88px 52px;
   }
 
   .title-skills-about {
