--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -7,10 +7,10 @@
           <div class="block-box">
             <div class="first-block">
               <div class="tech-list">
-                <div class="projects-list-item-tech">#react</div>
-                <div class="projects-list-item-tech">#js</div>
-                <div class="projects-list-item-tech">#node js</div>
-                <div class="projects-list-item-tech">#git</div>
+                <div class="projects-list-item-tech n-one">#react</div>
+                <div class="projects-list-item-tech n-two">#js</div>
+                <div class="projects-list-item-tech n-three">#node js</div>
+                <div class="projects-list-item-tech n-four">#git</div>
               </div>
               <p class="projects-text">
                 Programming Across Borders: Ideas, Technologies, Innovations
@@ -61,10 +61,10 @@
           <div class="block-box">
             <div class="first-block">
               <div class="tech-list">
-                <div class="projects-list-item-tech">#react</div>
-                <div class="projects-list-item-tech">#js</div>
-                <div class="projects-list-item-tech">#node js</div>
-                <div class="projects-list-item-tech">#git</div>
+                <div class="projects-list-item-tech n-one">#react</div>
+                <div class="projects-list-item-tech n-two">#js</div>
+                <div class="projects-list-item-tech n-three">#node js</div>
+                <div class="projects-list-item-tech n-four">#git</div>
               </div>
               <p class="projects-text">
                 Programming Across Borders: Ideas, Technologies, Innovations
@@ -115,10 +115,10 @@
           <div class="block-box">
             <div class="first-block">
               <div class="tech-list">
-                <div class="projects-list-item-tech">#react</div>
-                <div class="projects-list-item-tech">#js</div>
-                <div class="projects-list-item-tech">#node js</div>
-                <div class="projects-list-item-tech">#git</div>
+                <div class="projects-list-item-tech n-one">#react</div>
+                <div class="projects-list-item-tech n-two">#js</div>
+                <div class="projects-list-item-tech n-three">#node js</div>
+                <div class="projects-list-item-tech n-four">#git</div>
               </div>
               <p class="projects-text">
                 Programming Across Borders: Ideas, Technologies, Innovations
