--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -105,11 +105,60 @@
 .disabled-button:hover {
   fill: #fafafa;
   stroke: #fafafa;
-  border-color: transparent;
+  border-color: rgba(250, 250, 250, 0.2);
   box-shadow: none;
 }
 .disabled-button {
   opacity: 0.2;
+}
+/* Animation */
+@keyframes projectsMarkup {
+  0% {
+    box-shadow: 0 0 10px #fafafa;
+    background-color: #fafafa;
+  }
+  50% {
+    box-shadow: 0 0 15px 3px #e0373f;
+    background-color: #e0373f;
+    color: #fafafa;
+  }
+  100% {
+    box-shadow: 0 0 10px #fafafa;
+    background-color: #fafafa;
+  }
+}
+
+.projects-list-item-tech {
+  animation: projectsMarkup 6s infinite;
+}
+.n-one {
+  animation-delay: 0.75s;
+}
+.n-two {
+  animation-delay: 1.5s;
+}
+.n-three {
+  animation-delay: 2.25s;
+}
+.n-four {
+  animation-delay: 2.99s;
+}
+@keyframes buttonMarkup {
+  0% {
+    box-shadow: 0 0 10px #e0373f;
+  }
+  50% {
+    box-shadow: 0 0 15px 3px #000000;
+  }
+  100% {
+    box-shadow: 0 0 10px #e0373f;
+  }
+}
+.projects-link-button {
+  animation: buttonMarkup 6s infinite;
+}
+.projects-text {
+  text-shadow: 1px 1px 1px #000000;
 }
 /* -------------------------------TABLET */
 @media screen and (min-width: 768px) {
@@ -164,53 +213,5 @@
   .second-block {
     padding: 120px 37px;
     border-radius: 0 24px 24px 0;
-  }
-  @keyframes projectsMarkup {
-    0% {
-      box-shadow: 0 0 10px #fafafa;
-      background-color: #fafafa;
-    }
-    50% {
-      box-shadow: 0 0 15px 3px #e0373f;
-      background-color: #e0373f;
-      color: #fafafa;
-    }
-    100% {
-      box-shadow: 0 0 10px #fafafa;
-      background-color: #fafafa;
-    }
-  }
-
-  .projects-list-item-tech {
-    animation: projectsMarkup 6s infinite;
-  }
-  .n-one {
-    animation-delay: 0.75s;
-  }
-  .n-two {
-    animation-delay: 1.5s;
-  }
-  .n-three {
-    animation-delay: 2.25s;
-  }
-  .n-four {
-    animation-delay: 2.99s;
-  }
-  @keyframes buttonMarkup {
-    0% {
-      box-shadow: 0 0 10px #e0373f;
-    }
-    50% {
-      box-shadow: 0 0 15px 3px #000000;
-    }
-    100% {
-      box-shadow: 0 0 10px #e0373f;
-    }
-  }
-  .projects-link-button {
-    animation: buttonMarkup 6s infinite;
-  }
-  .projects-text {
-    text-shadow: 1px 1px 1px #000000;
   }
 }
