--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,7 +10,6 @@
   .page-header {
     padding: 0 16px;
   }
-
 }
 
 .header-container {
@@ -57,6 +56,105 @@
 
   .header-button {
     display: none;
+  }
+}
+
+/*------------------------------------------MOBILE MENU----------------------------------------------------*/
+
+@media screen and (max-width: 767px) {
+  .mobile-menu-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/hero/hero-mobile.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-clip: padding-box;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+  }
+
+  @media screen and (min-resolution: 192dpi) and (max-width: 767px),
+    screen and (min-resolution: 2dppx) and (max-width: 767px),
+    screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
+    .hero-section {
+      background-image: url(../img/hero/hero-mobile@2x.png);
+    }
+  }
+
+  .mobile-menu-wrapper.is-open {
+    transform: translateX(0%);
+  }
+
+  .mobile-menu-container {
+    max-width: 375px;
+    height: 100%;
+    margin: 0 auto;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 32px 0 64px 0;
+  }
+
+  .mobile-menu-close-btn {
+    position: absolute;
+    border: none;
+    stroke: #fafafa;
+    background-color: transparent;
+    padding: 0 18px;
+    line-height: 0;
+    right: -108px;
+  }
+
+  .mobile-menu-navigation {
+    margin: 0 auto;
+    width: 67px;
+    margin-top: 242px;
+    text-align: center;
+  }
+
+  .mobile-menu-list {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .mobile-menu-link {
+    text-decoration: underline;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: -0.02em;
+    text-decoration-skip-ink: none;
+  }
+
+  .mobile-menu-link:active {
+    color: #e0373f;
+  }
+
+  .mobile-order-button {
+    margin-top: 289px;
+    border: none;
+    border-radius: 60px;
+    padding: 14px 31px;
+    width: 164px;
+    height: 45px;
+    color: #fafafa;
+    background-color: #ed3b44;
+    font-weight: 500;
+    letter-spacing: -0.02em;
+    font-size: 14px;
+    align-content: center;
+  }
+
+  .mobile-order-button {
+    background-color: #e0373f;
   }
 }
 
