--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,3 +28,32 @@
     </button>
   </div>
 </header>
+
+<!-- MOBILE MENU -->
+
+<!-- <div class="mobile-menu-wrapper">
+  <div class="container mobile-menu-container">
+    <button class="mobile-menu-close-btn" type="button">
+      <svg class="mobile-menu-close-btn-icon" width="28" height="28" aria-label="mobile menu close icon">
+        <use href="./img/header/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+    <nav class="mobile-menu-navigation">
+      <ul class="list mobile-menu-list">
+        <li class="mobile-menu-item">
+          <a class="link mobile-menu-link mobile-aboutme" href="#aboutme">About me</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a class="link mobile-menu-link" href="#benefits">Benefits</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a class="link mobile-menu-link" href="#projects">Projects</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a class="link mobile-menu-link" href="#faq">FAQ</a>
+        </li>
+      </ul>
+    </nav>
+    <a class="mobile-order-button" href="#footer">Order the project</a>
+  </div>
+</div> -->
