--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
 
 <!-- MOBILE MENU -->
 
-<!-- <div class="mobile-menu-wrapper">
+<div class="mobile-menu-wrapper">
   <div class="container mobile-menu-container">
     <button class="mobile-menu-close-btn" type="button">
       <svg class="mobile-menu-close-btn-icon" width="28" height="28" aria-label="mobile menu close icon">
@@ -56,4 +56,4 @@
     </nav>
     <a class="mobile-order-button" href="#footer">Order the project</a>
   </div>
-</div> -->
+</div>
