--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,4 +1,4 @@
-<section class="section projects-section">
+<section class="section projects-section" id="projects">
   <div class="container">
     <h2 class="projects-title">Projects</h2>
     <div class="swiper">
@@ -16,6 +16,7 @@
                 Programming Across Borders: Ideas, Technologies, Innovations
               </p>
               <a
+                target="_blank"
                 href="https://github.com/LAdamenko/project-united-minds-js"
                 class="projects-link-button"
                 >See project</a
@@ -70,6 +71,7 @@
                 Programming Across Borders: Ideas, Technologies, Innovations
               </p>
               <a
+                target="_blank"
                 href="https://github.com/LAdamenko/project-united-minds-js"
                 class="projects-link-button"
                 >See project</a
@@ -124,6 +126,7 @@
                 Programming Across Borders: Ideas, Technologies, Innovations
               </p>
               <a
+                target="_blank"
                 href="https://github.com/LAdamenko/project-united-minds-js"
                 class="projects-link-button"
                 >See project</a
