--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -103,7 +103,7 @@
     </div>
     <div class="skills-about-container swiper-about">
       <ul class="list-skills-about swiper-wrapper">
-        <li class="item-skills-about red-skill swiper-slide">
+        <li class="item-skills-about swiper-slide">
           <h3 class="title-skills-about">HTML/CSS</h3>
         </li>
         <li class="item-skills-about swiper-slide">
