--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -15,8 +15,12 @@
   -webkit-text-size-adjust: 100%;
 }
 
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 /* Reset styles */
