--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="page-header container">
+<header class="page-header">
   <div class="header-container">
     <div class="logo-container">
       <a href="./index.html/">
@@ -41,7 +41,7 @@
     <nav class="mobile-menu-navigation">
       <ul class="list mobile-menu-list">
         <li class="mobile-menu-item">
-          <a class="link mobile-menu-link mobile-aboutme" href="#aboutme">About me</a>
+          <a class="link mobile-menu-link mobile-aboutme" href="#btn-about">About me</a>
         </li>
         <li class="mobile-menu-item">
           <a class="link mobile-menu-link" href="#benefits">Benefits</a>
@@ -57,3 +57,4 @@
     <a class="mobile-order-button" href="#footer">Order the project</a>
   </div>
 </div>
+<script src="./js/header.js" type="module"></script>
