--- a/src/css/header.css
+++ b/src/css/header.css
@@ -134,6 +134,10 @@
     text-decoration-skip-ink: none;
   }
 
+  .mobile-menu-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
   .mobile-menu-link:active {
     color: #e0373f;
   }
@@ -201,14 +205,26 @@
     width: 1376px;
   }
 
+  .logo {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
   .logo:hover,
   .logo:focus {
     color: #e0373f;
   }
 
+  .menu-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
   .menu-link:hover,
   .menu-link:focus {
     color: #e0373f;
+  }
+
+  .header-button {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
 
   .header-button:hover,
