--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -164,6 +164,10 @@
     margin-bottom: 243px;
   }
 
+  .social-media-item {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
   .social-media-item:hover,
   .social-media-item:focus {
     background-color: #e0373f;
@@ -171,6 +175,10 @@
 
   .social-media-item {
     cursor: pointer;
+  }
+
+  .email-link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
 
   .email-link:hover,
