fix: css and html

--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,6 +1,6 @@
-<section id="benefits" class="section-benefits benefits">
+<section id="benefits" class="section benefits-section ">
 
-	<div class="benefits-container">
+	<div class="container benefits-container">
 
 		<h2 class="benefits-title">Benefits of working with me</h2>
 
