--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -8,8 +8,7 @@
     min-width: 320px;
     max-width: 375px;
     margin: auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 32px 16px;
 
 }
 
@@ -60,6 +59,8 @@
     fill: none;
     stroke: #fafafa;
     cursor: pointer;
+    transition: stroke 1s, border 1s;
+    background-color: transparent;
 }
 
 .reviews-list .reviews-item {
@@ -114,14 +115,26 @@
     height: 24px;
 }
 
+.swiper-button-prev-reviews:hover,
+.swiper-button-next-reviews:hover {
+    border: 1px solid #e0373f;
+    stroke: #e0373f;
+
+}
+
+.swiper-navigation .swiper-button-disabled {
+    stroke: rgba(250, 250, 250, 0.2);
+    border-color: rgba(250, 250, 250, 0.2);
+    box-shadow: none;
+}
+
+
 /* ========== tablet ========== */
 
 @media screen and (min-width: 768px) {
     .reviews-section {
         width: 768px;
-        padding-left: 32px;
-        padding-right: 32px;
-
+        padding: 48px 32px;
         max-width: none;
     }
 
@@ -157,6 +170,7 @@
     .reviews-section {
         width: 1440px;
         margin: auto;
+        padding: 82px 32px;
     }
 
     .swiper-container {
