--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,16 +3,16 @@
   <div class="swiper-container">
     <ul class="reviews-list swiper-wrapper"></ul>
     <nav class="swiper-navigation">
-      <div class="swiper-button-prev-reviews">
+      <button class="swiper-button-prev-reviews">
         <svg class="icon-arrow">
           <use href="./img/reviews/arrows.svg#icon-arrow-narrow-left"></use>
         </svg>
-      </div>
-      <div class="swiper-button-next-reviews">
+      </button>
+      <button class="swiper-button-next-reviews">
         <svg class="icon-arrow">
           <use href="./img/reviews/arrows.svg#icon-arrow-narrow-right"></use>
         </svg>
-      </div>
+      </button>
     </nav>
   </div>
   <div class="not-found"><p>Not found</p></div>
