--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,15 +14,17 @@
     </div>
 
     <form id="contact-form">
-      <input
-        type="email"
-        id="email"
-        name="email"
-        pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-        placeholder="clients@gmail.com"
-        required
-      />
-
+      <div class="validateEmail">
+        <input
+          type="email"
+          id="email"
+          name="email"
+          pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
+          placeholder="clients@gmail.com"
+          required
+        />
+        <div id="emailValidationMessage"></div>
+      </div>
       <textarea id="comment" name="comment" placeholder="comments"></textarea>
 
       <button type="submit" id="submit-btn">Send</button>
