--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -57,4 +57,26 @@
     <a class="mobile-order-button" href="#footer">Order the project</a>
   </div>
 </div>
+
+<!-- TABLET AND DESKTOP MENU NAVIGATION -->
+
+<div class="tablet-and-desktop-menu-navigation-wrapper">
+  <nav class="tablet-and-desktop-menu-navigation">
+    <ul class="list tablet-and-desktop-menu-list">
+      <li class="tablet-and-desktop-menu-item">
+        <a class="link tablet-and-desktop-menu-link mobile-aboutme" href="#btn-about">About me</a>
+      </li>
+      <li class="tablet-and-desktop-menu-item">
+        <a class="link tablet-and-desktop-menu-link" href="#benefits">Benefits</a>
+      </li>
+      <li class="tablet-and-desktop-menu-item">
+        <a class="link tablet-and-desktop-menu-link" href="#projects">Projects</a>
+      </li>
+      <li class="tablet-and-desktop-menu-item">
+        <a class="link tablet-and-desktop-menu-link" href="#faq">FAQ</a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
 <script src="./js/header.js" type="module"></script>
