--- a/src/css/header.css
+++ b/src/css/header.css
@@ -54,6 +54,10 @@
     display: none;
   }
 
+  .tablet-and-desktop-menu-navigation-wrapper {
+    display: none;
+  }
+
   .header-button {
     display: none;
   }
@@ -195,6 +199,39 @@
     background-color: #ed3b44;
     letter-spacing: -0.02em;
     font-size: 15px;
+  }
+
+
+  .tablet-and-desktop-menu-navigation-wrapper {
+    display: none;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-52%);
+    top: 80px;
+    width: 67px;
+    text-align: center;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .tablet-and-desktop-menu-list {
+    align-items: center;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .tablet-and-desktop-menu-link {
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: -0.02em;
+  }
+
+  .tablet-and-desktop-menu-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
+  .tablet-and-desktop-menu-link:hover,
+  .tablet-and-desktop-menu-link:focus {
+    color: #e0373f;
   }
 }
 
