--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,94 +1,144 @@
-<section class="section" id="faq">
-    <h2 class="title-faq">FAQ</h2>
-    <ul class="faq-list">
-        <li class="faq-item">
-            <div>
-                <h3 class="title-item-list"> What programming languages ​​are most often used in your project</h3>
-            </div>
+<section class="section faq">
+    <div class="container">
+        <h2 class="title-faq" id="faq">FAQ</h2>
 
-            <div>
-                <p>
-                    In the field of web development, there are various technologies and programming languages.
-                    Typically, this includes a
-                    combination of frontend (client side) and backend (server side) languages.
-                </p>
-            </div>
+        <ul class="faq-list accordion-container">
 
-        </li>
+            <li class="faq-item ac">
+                <div class="qwestions">
+                    <h3 class="title-item-list ac-header "> What programming languages ​​are most often used in your
+                        project
+                    </h3>
+                    <button type="button" class="btn-answer ac-trigger">
+                        <svg class="icon-answer">
+                            <use href="../img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                        </svg>
+                    </button>
+                </div>
 
-        <li class="faq-item">
-            <div>
-                <h3 class="title-item-list"> What are the deadlines for the project</h3>
+                <div class="ac-panel">
+                    <p class="text-item-list ac-text ">
+                        In the field of web development, there are various technologies and programming languages.
+                        Typically, this includes a
+                        combination of frontend (client side) and backend (server side) languages.
+                    </p>
+                </div>
+
+            </li>
+
+            <li class="faq-item ac">
+                <div class="qwestions">
+                    <h3 class="title-item-list ac-header"> What are the deadlines for the project</h3>
+                    <button type="button" class="btn-answer ac-trigger">
+                        <svg class="icon-answer">
+                            <use href="../img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                        </svg>
+                    </button>
+
+                </div>
+
+                <div class="ac-panel">
+
+                    <p class="text-item-list ac-text "> The terms of project implementation depend to a large extent on
+                        a
+                        number of
+                        factors, such as the
+                        scope of the project,
+                        its complexity, and the availability of resources. Determining exact deadlines is a difficult
+                        task,
+                        and it usually
+                        occurs during the planning phase of the project.
+                    </p>
+                </div>
+
+            </li>
+
+            <li class="faq-item ac">
+                <div class="qwestions">
+                    <h3 class="title-item-list ac-header"> What payment methods do you accept? </h3>
+                    <button type="button" class="btn-answer ac-trigger">
+                        <svg class="icon-answer">
+                            <use href="../img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="ac-panel">
+                    <p class="text-item-list ac-text ">Payment through credit and debit cards such as Visa, MasterCard,
+                        specialized
+                        electronic payment
+                        systems such as PayPal,
+                        as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+                    </p>
+                </div>
+
+            </li>
+
+            <li class="faq-item ac">
+                <div class="qwestions">
+                    <h3 class="title-item-list ac-header"> How can I contact you</h3>
+                    <button type="button" class="btn-answer ac-trigger">
+                        <svg class="icon-answer">
+                            <use href="../img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="ac-panel">
+                    <p class="text-item-list ac-text "> In the field of web development, there are various technologies
+                        and
+                        programming languages.
+                        Typically, this includes a combination of frontend (client side) and backend (server side)
+                        languages.
+                    </p>
+                </div>
+            </li>
+
+            <li class="faq-item ac">
+                <div class="qwestions">
+                    <h3 class="title-item-list ac-header"> Do you provide advice or support</h3>
+                    <button type="button" class="btn-answer ac-trigger">
+                        <svg class="icon-answer">
+                            <use href="../img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="ac-panel">
+                    <p class="text-item-list ac-text ">The terms of project implementation depend to a large extent on a
+                        number of
+                        factors, such as the
+                        scope of the project,
+                        its complexity, and the availability of resources. Determining exact deadlines is a difficult
+                        task,
+                        and it usually
+                        occurs during the planning phase of the project.
+                    </p>
+                </div>
+            </li>
+
+            <li class="faq-item ac">
+                <div class="qwestions">
+                    <h3 class="title-item-list ac-header">What does the process of developing a software product look
+                        like
+                        from idea
+                        to
+                        implementation
+                    </h3>
+                    <button type="button" class="btn-answer ac-trigger">
+                        <svg class="icon-answer">
+                            <use href="../img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                        </svg>
+                    </button>
+                </div>
+                <div class="ac-panel">
+                    <p class="text-item-list ac-text ">Payment through credit and debit cards such as Visa, MasterCard,
+                        specialized
+                        electronic payment
+                        systems such as PayPal,
+                        as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+                    </p>
+                </div>
+            </li>
 
 
-            </div>
-
-            <div>
-
-                <p> The terms of project implementation depend to a large extent on a number of factors, such as the
-                    scope of the project,
-                    its complexity, and the availability of resources. Determining exact deadlines is a difficult task,
-                    and it usually
-                    occurs during the planning phase of the project.
-                </p>
-            </div>
-
-        </li>
-
-        <li class="faq-item">
-            <div>
-                <h3 class="title-item-list"> What payment methods do you accept? </h3>
-            </div>
-            <div>
-                <p>Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment
-                    systems such as PayPal,
-                    as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
-                </p>
-            </div>
-
-        </li>
-
-        <li class="faq-item">
-            <div>
-                <h3 class="title-item-list"> How can I contact you</h3>
-            </div>
-            <div>
-                <p> In the field of web development, there are various technologies and programming languages.
-                    Typically, this includes a combination of frontend (client side) and backend (server side)
-                    languages.
-                </p>
-            </div>
-        </li>
-
-        <li class="faq-item">
-            <div>
-                <h3 class="title-item-list"> Do you provide advice or support</h3>
-            </div>
-            <div>
-                <p>The terms of project implementation depend to a large extent on a number of factors, such as the
-                    scope of the project,
-                    its complexity, and the availability of resources. Determining exact deadlines is a difficult task,
-                    and it usually
-                    occurs during the planning phase of the project.
-                </p>
-            </div>
-        </li>
-
-        <li class="faq-item">
-            <div>
-                <h3 class="title-item-list">What does the process of developing a software product look like from idea
-                    to
-                    implementation
-                </h3>
-            </div>
-            <div>
-                <p>Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment
-                    systems such as PayPal,
-                    as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
-                </p>
-            </div>
-        </li>
-
-
-    </ul>
+        </ul>
+    </div>
 </section>
