--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<section class="footer-section section" id="footer">
+<section class="footer-section" id="footer">
   <div class="container-footer">
     <div class="luck">
       <img
