--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -1,6 +1,3 @@
-
-
-
 .covers-heading {
   display: none;
 }
@@ -20,6 +17,7 @@
   position: relative;
   margin-bottom: 164px;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .covers-slide-list {
@@ -38,20 +36,20 @@
 }
 .animation{
   animation-name: slideLine;
-  animation-duration: 7s;
+  animation-duration: 9s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 }
 
 @keyframes slideLine {
   0% {
-    transform: translateX(-120px);
+    transform: translateX(-150px);
   } 
   50% {
     transform: translateX(-520px); 
   }
   100% {
-    transform: translateX(-120px);
+    transform: translateX(-150px);
   }
 }
 
