update links svg

--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -11,7 +11,7 @@
                     </h3>
                     <button type="button" class="btn-answer ac-trigger">
                         <svg class="icon-answer">
-                            <use href="./img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                            <use href="./img/icons.svg#icon-arrow-down"></use>
                         </svg>
                     </button>
                 </div>
@@ -31,7 +31,8 @@
                     <h3 class="title-item-list ac-header"> What are the deadlines for the project</h3>
                     <button type="button" class="btn-answer ac-trigger">
                         <svg class="icon-answer">
-                            <use href="./img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                            <use href="./img/icons.svg#icon-arrow-down"></use>
+
                         </svg>
                     </button>
 
@@ -58,7 +59,8 @@
                     <h3 class="title-item-list ac-header"> What payment methods do you accept? </h3>
                     <button type="button" class="btn-answer ac-trigger">
                         <svg class="icon-answer">
-                            <use href="./img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                            <use href="./img/icons.svg#icon-arrow-down"></use>
+
                         </svg>
                     </button>
                 </div>
@@ -78,7 +80,8 @@
                     <h3 class="title-item-list ac-header"> How can I contact you</h3>
                     <button type="button" class="btn-answer ac-trigger">
                         <svg class="icon-answer">
-                            <use href="./img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                            <use href="./img/icons.svg#icon-arrow-down"></use>
+
                         </svg>
                     </button>
                 </div>
@@ -97,7 +100,8 @@
                     <h3 class="title-item-list ac-header"> Do you provide advice or support</h3>
                     <button type="button" class="btn-answer ac-trigger">
                         <svg class="icon-answer">
-                            <use href="./img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                            <use href="./img/icons.svg#icon-arrow-down"></use>
+
                         </svg>
                     </button>
                 </div>
@@ -124,7 +128,8 @@
                     </h3>
                     <button type="button" class="btn-answer ac-trigger">
                         <svg class="icon-answer">
-                            <use href="./img/faq/icons-Faq.svg#icon-arrow-down"></use>
+                            <use href="./img/icons.svg#icon-arrow-down"></use>
+
                         </svg>
                     </button>
                 </div>
@@ -137,7 +142,6 @@
                     </p>
                 </div>
             </li>
-
 
         </ul>
     </div>
