--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -172,16 +172,12 @@
       <div class="button-box">
         <div class="scroll-button swiper-prev">
           <svg class="scroll-icon" width="32" height="32">
-            <use
-              href="./img/projects/projects-sprite.svg#icon-arrow-narrow-left"
-            ></use>
+            <use href="./img/icons.svg#icon-arrow-narrow-left"></use>
           </svg>
         </div>
         <div class="scroll-button swiper-next">
           <svg class="scroll-icon" width="32" height="32">
-            <use
-              href="./img/projects/projects-sprite.svg#icon-arrow-narrow-right"
-            ></use>
+            <use href="/img/icons.svg#icon-arrow-narrow-right"></use>
           </svg>
         </div>
       </div>
