--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -42,7 +42,7 @@
             <h3 class="small-title-about ac-header">About me</h3>
             <button type="button" class="btn-about ac-trigger">
               <svg class="icon-about icon-open">
-                <use href="./img/about/icons-about.svg#icon-btn"></use>
+                <use href="./img/icons.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
@@ -75,7 +75,7 @@
             <h3 class="small-title-about ac-header">Role</h3>
             <button type="button" class="btn-about ac-trigger" id="btn-role">
               <svg class="icon-about icon-close">
-                <use href="./img/about/icons-about.svg#icon-btn"></use>
+                <use href="./img/icons.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
@@ -98,7 +98,7 @@
             <h3 class="small-title-about ac-header">Education</h3>
             <button type="button" class="btn-about ac-trigger" id="btn-edu">
               <svg class="icon-about icon-close">
-                <use href="./img/about/icons-about.svg#icon-btn"></use>
+                <use href="./img/icons.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
@@ -145,7 +145,7 @@
       </ul>
       <button type="button" class="btn-arrow" id="arrow">
         <svg class="arrow-skills">
-          <use href="./img/about/icons-about.svg#icon-arrow"></use>
+          <use href="./img/icons.svg#icon-arrow"></use>
         </svg>
       </button>
     </div>
