--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -5,12 +5,12 @@
     <nav class="swiper-navigation">
       <button class="swiper-button-prev-reviews">
         <svg class="icon-arrow">
-          <use href="./img/reviews/arrows.svg#icon-arrow-narrow-left"></use>
+          <use href="./img/icons.svg#icon-arrow-narrow-left"></use>
         </svg>
       </button>
       <button class="swiper-button-next-reviews">
         <svg class="icon-arrow">
-          <use href="./img/reviews/arrows.svg#icon-arrow-narrow-right"></use>
+          <use href="./img/icons.svg#icon-arrow-narrow-right"></use>
         </svg>
       </button>
     </nav>
