--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="page-header">
   <div class="header-container">
     <div class="logo-container">
-      <a href="./index.html/">
+      <a href="./index.html">
         <picture>
           <source
             srcset="./img/header/header.png 1x, ./img/header/header@2x.png 2x"
