--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
                 <li class="social-media-item"><a class="social-media-link" href="https://www.instagram.com/goitclub/" target="_blank">IG</a></li>
                 <li class="social-media-item"><a class="social-media-link" href="https://www.facebook.com/goITclub/" target="_blank">FB</a></li>
                 <li class="social-media-item"><a class="social-media-link" href="https://www.youtube.com/c/GoIT" target="_blank">YT</a></li>
-                <li class="social-media-item"><a class="social-media-link" href="https://ladamenko.github.io/project-united-minds-js/" target="_blank">GH</a></li>
+                <li class="social-media-item"><a class="social-media-link" href="https://github.com/LAdamenko/project-united-minds-js" target="_blank">GH</a></li>
                 <li class="email-item"><a class="email-link" href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a></li>
         </ul>
         
