Fix 2x images covers section

--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,34 +1,93 @@
 <section class="covers-section section" id="covers">
   <h2 class="covers-heading">Covers</h2>
   <div class="covers-wrapper">
-    
-      <ul class="covers-slide-list">
-        <li class="covers-list-item"><img
-          srcset="./img/covers/slide1.png 1x, ./img/covers/slide1.png 2x" src="./img/covers/slide1.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide2.png 1x, ./img/covers/slide2.png 2x" src="./img/covers/slide2.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide3.png 1x, ./img/covers/slide3.png 2x" src="./img/covers/slide3.png" alt="" class="covers-slide" /></li>
-      </ul>
+    <ul class="covers-slide-list">
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide1.png 1x, ./img/covers/slide1-2x.png 2x"
+          src="./img/covers/slide1.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide2.png 1x, ./img/covers/slide2-2x.png 2x"
+          src="./img/covers/slide2.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide3.png 1x, ./img/covers/slide3-2x.png 2x"
+          src="./img/covers/slide3.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+    </ul>
 
-      <ul class="covers-slide-list">
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide4.png 1x, ./img/covers/slide4.png 2x" src="./img/covers/slide4.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide5.png 1x, ./img/covers/slide5.png 2x" src="./img/covers/slide5.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide6.png 1x, ./img/covers/slide6.png 2x" src="./img/covers/slide6.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide7.png 1x, ./img/covers/slide7.png 2x" src="./img/covers/slide7.png" alt="" class="covers-slide" /></li>
-      </ul>
+    <ul class="covers-slide-list">
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide4.png 1x, ./img/covers/slide4-2x.png 2x"
+          src="./img/covers/slide4.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide5.png 1x, ./img/covers/slide5-2x.png 2x"
+          src="./img/covers/slide5.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide6.png 1x, ./img/covers/slide6-2x.png 2x"
+          src="./img/covers/slide6.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide7.png 1x, ./img/covers/slide7-2x.png 2x"
+          src="./img/covers/slide7.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+    </ul>
 
-      <ul class="covers-slide-list">
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide8.png 1x, ./img/covers/slide8.png 2x" src="./img/covers/slide8.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide9.png 1x, ./img/covers/slide9.png 2x" src="./img/covers/slide9.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img 
-          srcset="./img/covers/slide10.png 1x, ./img/covers/slide10.png 2x" src="./img/covers/slide10.png" alt="" class="covers-slide" /></li>
-      </ul>
+    <ul class="covers-slide-list">
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide8.png 1x, ./img/covers/slide8-2x.png 2x"
+          src="./img/covers/slide8.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide9.png 1x, ./img/covers/slide9-2x.png 2x"
+          src="./img/covers/slide9.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+      <li class="covers-list-item">
+        <img
+          srcset="./img/covers/slide10.png 1x, ./img/covers/slide10-2x.png 2x"
+          src="./img/covers/slide10.png"
+          alt=""
+          class="covers-slide"
+        />
+      </li>
+    </ul>
   </div>
 </section>
