--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -131,7 +131,7 @@
     background-image: url(../img/hero/hero-tablet.png);
   }
 
-  @media screen and (min-resolution: 192dpi) and (max-width: 1339x),
+  @media screen and (min-resolution: 192dpi) and (max-width: 1339px),
     screen and (min-resolution: 2dppx) and (max-width: 1339px),
     screen and (min-device-pixel-ratio: 2) and (max-width: 1339px) {
     .hero-section {
@@ -217,7 +217,7 @@
   }
 }
 
-@media screen and (min-resolution: 192dpi) and (min-width: 1440x),
+@media screen and (min-resolution: 192dpi) and (min-width: 1440px),
   screen and (min-resolution: 2dppx) and (min-width: 1440px),
   screen and (min-device-pixel-ratio: 2) and (min-width: 1440px) {
   .hero-section {
