--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -40,7 +40,7 @@
         <li class="item-about ac">
           <div class="head-cv-about-container">
             <h3 class="small-title-about ac-header">About me</h3>
-            <button type="button" class="btn-about ac-trigger">
+            <button type="button" class="btn-about ac-trigger" aria-label="open-close-button">
               <svg class="icon-about icon-open">
                 <use href="./img/icons.svg#icon-btn"></use>
               </svg>
@@ -57,23 +57,15 @@
               am able to
               effectively solve even the most difficult tasks encountered on the way.</p>
             <p class="paragraph-about ac-text-about">Able to work both independently and in a team. I can effectively cooperate with
-              colleagues, exchanging ideas and
-              finding
-              optimal solutions. Professional maturity allows you to calmly cope with challenges and stressful
-              situations, while
-              maintaining a high quality of work.I am always looking for opportunities for self-improvement. I actively
-              study new
-              technologies and practices to stay abreast of the latest innovations. I have a strong understanding of
-              various
-              programming languages, frameworks and architectural concepts that allow me to create efficient and
-              scalable software.
+              colleagues, exchanging ideas and finding optimal solutions. Professional maturity allows you to calmly cope with challenges and stressful situations, while maintaining a high quality of work. <br> I am always looking for opportunities for self-improvement. I actively
+              study new technologies and practices to stay abreast of the latest innovations. I have a strong understanding of various programming languages, frameworks and architectural concepts that allow me to create efficient and scalable software.
             </p>
           </div>
         </li>
         <li class="item-about ac">
           <div class="head-cv-about-container">
             <h3 class="small-title-about ac-header">Role</h3>
-            <button type="button" class="btn-about ac-trigger" id="btn-role">
+            <button type="button" class="btn-about ac-trigger" id="btn-role" aria-label="open-close-button">
               <svg class="icon-about icon-close">
                 <use href="./img/icons.svg#icon-btn"></use>
               </svg>
@@ -96,7 +88,7 @@
         <li class="item-about ac">
           <div class="head-cv-about-container">
             <h3 class="small-title-about ac-header">Education</h3>
-            <button type="button" class="btn-about ac-trigger" id="btn-edu">
+            <button type="button" class="btn-about ac-trigger" id="btn-edu" aria-label="open-close-button">
               <svg class="icon-about icon-close">
                 <use href="./img/icons.svg#icon-btn"></use>
               </svg>
@@ -108,7 +100,7 @@
                 <p class="paragraph-about">2018 - 2019 / Frontend Development Diploma, GoIT IT <br> School, New York</p>
               </li>
               <li class="ac-text-about">
-                <p class="paragraph-about">2019 - 2020 / Advanced Web Development Certificate, GoIT IT School, New York
+                <p class="paragraph-about">2019 - 2020 / Advanced Web Development Certificate, GoIT IT <br> School, New York
                 </p>
               </li>
               <li class="ac-text-about">
