--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,3 +14,33 @@
 @import url('./covers.css');
 @import url('./reviews.css');
 @import url('./footer.css');
+
+#scrollToTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  background-color: #ED3B44;
+  color: #fff;
+  border: none;
+  border-radius: 100px;
+  padding: 10px;
+  cursor: pointer;
+  stroke: #e0373f;
+  box-shadow: 0 0 15px 1px #e0373f;
+}
+
+#scrollToTopBtn:hover {
+  background-color: #E0373F;
+}
+
+.icon-to-top {
+  width: 12px;
+    height: 12px;
+    fill: none;
+    stroke: #fafafa;
+    stroke-width: 2px;
+    border: none;
+    transform: rotate(180deg);
+}
