--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,7 +25,12 @@
         />
         <div id="emailValidationMessage"></div>
       </div>
-      <textarea id="comment" name="comment" placeholder="comments"></textarea>
+      <textarea
+        id="comment"
+        name="comment"
+        placeholder="comments"
+        required
+      ></textarea>
 
       <button type="submit" id="submit-btn">Send</button>
     </form>
